--- a/Engineering/2.5webpack源码.md
+++ b/Engineering/2.5webpack源码.md
@@ -1040,3 +1040,1362 @@ class AsyncParallelHook extends Hook {
 module.exports = AsyncParallelHook
 ```
 
+## webpack 打包流程
+
+### 定位 webpack 打包入口
+
+执行 `npx webpack` 相当于找 `node_modules/.bin` 下面的 `webapck` 相关命令，这里拿 `webpack.cmd` 举例，这里有个比较常见的 `dp0`，可以理解为 cwd
+
+```bash
+@ECHO off
+SETLOCAL
+CALL :find_dp0
+
+IF EXIST "%dp0%\node.exe" (
+  SET "_prog=%dp0%\node.exe"
+) ELSE (
+  SET "_prog=node"
+  SET PATHEXT=%PATHEXT:;.JS;=;%
+)
+
+"%_prog%"  "%dp0%\..\webpack\bin\webpack.js" %*
+ENDLOCAL
+EXIT /b %errorlevel%
+:find_dp0
+SET dp0=%~dp0
+EXIT /b
+```
+
+![image-20220616163856143](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220616163856143.png)
+
+- cmd 文件核心的作用就是组装了 `node .../node_modules/webpack/bin/webpack.js ` 命令，并执行
+- 之后在 `webpack.js` 中加载 `node_modules/webpack-cli/package.json` 找到对应的 `bin: { webpack-cli:'bin/cli.js' }` 字段执行对应的 `node_modules/webpack-cl/bin/cli.js` 文件
+
+`cli.js` 作用：
+
+- 当前文件一般有两个操作，处理参数，将参数交给不同的逻辑（分发业务）
+- options 处理
+- complier 对象
+- complier.run
+
+![image-20220617090348347](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220617090348347.png)
+
+### 编译主流程
+
+```js
+let webpack = require('webpack')
+let options = require('./webpack.config')
+
+let compiler = webpack(options)
+
+compiler.run((err, stats) => {
+  console.log(err)
+  console.log(stats.toJson({
+    entries: true,
+    chunks: false,
+    modules: false,
+    assets: false
+  }))
+})
+```
+
+一切从 `let compiler = webpack(options)` 开始
+
+- webpack 函数执行后返回 `compiler` 对象，这里会先实例化 `Compiler` 类
+
+- 设置 `NodeEnvironmentPlugin` 让 `compiler` 对象具备文件读写能力
+
+- 通过循环挂载 `plugins`，并处理 webpack 内部默认的插件（入口文件）
+
+- 实例化后，如果 webpack 函数接受了回调 `callback` 则会直接执行 `compiler.run()` 方法，那么 webpack 就会自动开始编译
+
+  如果没有指定 `callback` 回调，需要自己调用 `run` 方法来启动编译
+
+![image-20220617113224839](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220617113224839.png)
+
+在 `Compiler` 中打印一下 hooks，里面比较重要的钩子如下：
+
+- `compiler.beforeRun`
+- `compiler.run`
+- `compiler.thisCompilation`
+- `compiler.beforeCompile`
+- `compiler.compile`
+- `compiler.make`
+- `compiler.afterCompile`
+
+```js
+class Compiler extends Tapable {
+	constructor(context) {
+		super();
+		this.hooks = { ... };
+    Object.keys(this.hooks).forEach(hookName => {
+      console.log(hookName);
+    })
+  }
+}
+```
+
+### 手写 webpack.js
+
+创建 `run.js` 文件
+
+```js
+let webpack = require('./lgPack')
+let options = require('./webpack.config')
+
+let compiler = webpack(options)
+
+compiler.run((err, stats) => {
+  console.log(err)
+  console.log(stats.toJson({
+    entries: true,
+    chunks: false,
+    modules: false,
+    assets: false
+  }))
+})
+```
+
+创建 lgPack 文件夹，并初始化 `package.json`，并修改 `"main": 'lib/webpack.js'`
+
+```bash
+mkdir lgPack
+cd lgPack
+npm init -y
+```
+
+创建 `lib/webpack.js`
+
+```js
+const Compiler = require('./Compiler')
+const NodeEnvironmentPlugin = require('./node/NodeEnvironmentPlugin')
+
+const webpack = function (options) {
+  // 01 实例化 compiler 对象
+  let compiler = new Compiler(options.context)
+  compiler.options = options
+
+  // 02 初始化 NodeEnvironmentPlugin（让compiler具备文件读写能力）
+  new NodeEnvironmentPlugin().apply(compiler)
+
+  // 03 挂载所有 plugins 至 compiler 对象身上
+  if (options.plugins && Array.isArray(options.plugins)) {
+    for (const plugin of options.plugin) {
+      plugin.apply(compiler)
+    }
+  }
+
+  // 04 挂载所有 webpack 内置的插件（入口）
+  // compiler.options = new WebpackOptionsApply().process(options, compiler)
+
+  // 05 返回 compiler 对象即可
+  return compiler
+}
+
+module.exports = webpack
+```
+
+创建 `lib/Compiler.js`
+
+```js
+const { Tapable, AsyncSeriesHook } = require('tapable')
+
+class Compiler extends Tapable {
+  constructor(context) {
+    super()
+    this.context = context
+    this.hooks = {
+      done: new AsyncSeriesHook(['stats'])
+    }
+  }
+  run(callback) {
+    callback(null, {
+      toJson() {
+        return {
+          entries: [], // 当前次打包的入口信息
+          chunks: [], //当前次打包的 chunk 信息
+          modules: [], // 模块信息
+          assets: [] // 当前次打包最终生成的资源
+        }
+      }
+    })
+  }
+}
+
+module.exports = Compiler
+```
+
+创建 `lib/node/NodeEnvironmentPlugin.js`
+
+```js
+const fs = require('fs')
+
+class NodeEnvironmentPlugin {
+  constructor(options) {
+    this.options = options || {}
+  }
+  apply(compiler) {
+    compiler.inputFileSystem = fs
+    compiler.outputFileSystem = fs
+  }
+}
+
+module.exports = NodeEnvironmentPlugin
+```
+
+### EntryOptionsPlugin 分析
+
+- 在 `webpack.js` 中找到 `compiler.options = new WebpackOptionsApply().process(options, compiler);`
+
+- 执行 `process` 的时候会执行 `new EntryOptionPlugin().apply(compiler);`
+
+  `entryOption` 在 `EntryOptionPlugin` 内部的 `apply` 方法中调用了 `tap` 注册了事件监听，该事件监听在 `new EntryOptionPlugin() ` 之后调用
+
+- `itemToPlugin` 它是一个函数，接收三个参数 `context, item, name`
+
+  在调用 `itemToPlugin` 时返回了一个实例对象
+
+  里面有一个构造函数负责接收 `context, item, name`
+
+  `compilation` 钩子监听
+
+  make 钩子监听
+
+![image-20220617160027093](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220617160027093.png)
+
+![image-20220617160200095](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220617160200095.png)
+
+![image-20220617160913517](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220617160913517.png)
+
+### 手写 EntryOptionsPlugin
+
+在 `webpack.js` 中把对应内容注释放开
+
+```js
+const WebpackOptionsApply = require('./WebpackOptionsApply')
+
+const webpack = function (options) {
+  // 04 挂载所有 webpack 内置的插件（入口）
+  compiler.options = new WebpackOptionsApply().process(options, compiler)
+}
+```
+
+创建 `lib/WebpackOptionsApply.js`
+
+```js
+const EntryOptionPlugin = require('./EntryOptionPlugin')
+
+class WebpackOptionsApply {
+  process(options, compiler) {
+    new EntryOptionPlugin().apply(compiler)
+
+    compiler.hooks.entryOption.call(options.context, options.entry)
+  }
+}
+
+module.exports = WebpackOptionsApply
+```
+
+创建 `lib/EntryOptionPlugin.js`
+
+```js
+const SingleEntryPlugin = require('./SingleEntryPlugin')
+
+const itemToPlugin = function (context, item, name) {
+  return new SingleEntryPlugin(context, item, name)
+}
+
+class EntryOptionPlugin {
+  apply(compiler) {
+    compiler.hooks.entryOption.tap('EntryOptionPlugin', (context, entry) => {
+      itemToPlugin(context, entry, 'main').apply(compiler)
+    })
+  }
+}
+
+module.exports = EntryOptionPlugin
+```
+
+创建 `lib/SingleEntryPlugin.js`
+
+```js
+class SingleEntryPlugin {
+  constructor(context, entry, name) {
+    this.context = context
+    this.entry = entry
+    this.name = name
+  }
+  apply(compiler) {
+    compiler.hooks.make.tapAsync('SingleEntryPlugin', (compilation, callback) => {
+      const { context, entry, name } = this
+      console.log('make 钩子监听执行了~~~')
+      // compilation.addEntry(context, entry, name, callback)
+    })
+  }
+}
+
+module.exports = SingleEntryPlugin
+```
+
+修改 `lib/Compiler.js`
+
+```js
+const { Tapable, AsyncSeriesHook, SyncBailHook, SyncHook, AsyncParallelHook } = require('tapable')
+
+class Compiler extends Tapable {
+  constructor(context) {
+    super()
+    this.context = context
+    this.hooks = {
+      done: new AsyncSeriesHook(['stats']),
+      entryOption: new SyncBailHook(['context', 'entry']),
+      beforeCompile: new AsyncSeriesHook(['params']),
+      compile: new SyncHook(['params']),
+      make: new AsyncParallelHook(['compilation']),
+      afterCompile: new AsyncSeriesHook(['compilation'])
+    }
+  }
+  run(callback) {
+    callback(null, {
+      toJson() {
+        return {
+          entries: [],  // 当前次打包的入口信息
+          chunks: [],  // 当前次打包的 chunk 信息
+          modules: [],  // 模块信息
+          assets: [], // 当前次打包最终生成的资源
+        }
+      }
+    })
+  }
+}
+```
+
+### run 分析及实现
+
+![image-20220620103917350](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220620103917350.png)
+
+```js
+const { Tapable, AsyncSeriesHook, SyncBailHook, SyncHook, AsyncParallelHook } = require('tapable')
+
+class Compiler extends Tapable {
+  constructor(context) {
+    super()
+    this.context = context
+    this.hooks = {
+      done: new AsyncSeriesHook(['stats']),
+      entryOption: new SyncBailHook(['context', 'entry']),
+
+      beforeRun: new AsyncSeriesHook(['compiler']),
+      run: new AsyncSeriesHook(['compiler']),
+
+      thisCompilation: new SyncHook(['compilation', 'params']),
+      compilation: new SyncHook(['compilation', 'params']),
+
+      beforeCompile: new AsyncSeriesHook(['params']),
+      compile: new SyncHook(['params']),
+      make: new AsyncParallelHook(['compilation']),
+      afterCompile: new AsyncSeriesHook(['compilation'])
+    }
+  }
+  run(callback) {
+    console.log('run 方法执行了~~~')
+    const finalCallback = function (err, stats) {
+      callback(err, stats)
+    }
+    const onCompiled = function (err, compilation) {
+      console.log('onCompiled 方法执行了~~~')
+      finalCallback(err, {
+        toJson() {
+          return {
+            entries: [], // 当前次打包的入口信息
+            chunks: [], //当前次打包的 chunk 信息
+            modules: [], // 模块信息
+            assets: [] // 当前次打包最终生成的资源
+          }
+        }
+      })
+    }
+
+    this.hooks.beforeRun.callAsync(this, err => {
+      this.hooks.run.callAsync(this, err => {
+        this.compile(onCompiled)
+      })
+    })
+  }
+  compile(callback) {}
+}
+
+module.exports = Compiler
+
+```
+
+### compile 分析及实现
+
+- `newCompilationParams` 方法调用，返回 `params`（重点获取）、`normalModuleFactory`
+- 调用 `beforeCompile` 钩子监听，在它的钩子回调中触发 `compile` 监听
+- 调用 `newCompilation` 方法，传入上面的 `params`，返回了一个 `compilation`
+- 调用一个 `createNewCompilation`（`Compilation.js`）
+- 上述操作完成之后可以触发 make 钩子监听
+
+![image-20220620110511207](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220620110511207.png)
+
+创建 `lib/normalModuleFactory.js`
+
+```js
+class normalModuleFactory {}
+
+module.exports = normalModuleFactory
+```
+
+创建 `lib/Compilation.js`
+
+```js
+class Compilation {}
+
+module.exports = Compilation
+```
+
+修改 `lib/Compiler.js`
+
+```js
+const { Tapable, AsyncSeriesHook, SyncBailHook, SyncHook, AsyncParallelHook } = require('tapable')
+const normalModuleFactory = require('./normalModuleFactory')
+const Compilation = require('./Compilation')
+
+class Compiler extends Tapable {
+  constructor(context) {
+    super()
+    this.context = context
+    this.hooks = {
+      done: new AsyncSeriesHook(['stats']),
+      entryOption: new SyncBailHook(['context', 'entry']),
+
+      beforeRun: new AsyncSeriesHook(['compiler']),
+      run: new AsyncSeriesHook(['compiler']),
+
+      thisCompilation: new SyncHook(['compilation', 'params']),
+      compilation: new SyncHook(['compilation', 'params']),
+
+      beforeCompile: new AsyncSeriesHook(['params']),
+      compile: new SyncHook(['params']),
+      make: new AsyncParallelHook(['compilation']),
+      afterCompile: new AsyncSeriesHook(['compilation'])
+    }
+  }
+  run(callback) {
+    console.log('run 方法执行了~~~')
+    const finalCallback = function (err, stats) {
+      callback(err, stats)
+    }
+    const onCompiled = function (err, compilation) {
+      console.log('onCompiled 方法执行了~~~')
+      finalCallback(err, {
+        toJson() {
+          return {
+            entries: [], // 当前次打包的入口信息
+            chunks: [], //当前次打包的 chunk 信息
+            modules: [], // 模块信息
+            assets: [] // 当前次打包最终生成的资源
+          }
+        }
+      })
+    }
+
+    this.hooks.beforeRun.callAsync(this, err => {
+      this.hooks.run.callAsync(this, err => {
+        this.compile(onCompiled)
+      })
+    })
+  }
+  compile(callback) {
+    const params = this.newCompilationParams()
+    this.hooks.beforeRun.callAsync(params, err => {
+      this.hooks.compile.call(params)
+      const compilation = this.newCompilation(params)
+      this.hooks.make.callAsync(compilation, err => {
+        console.log('make 钩子监听触发了~~~')
+        callback()
+      })
+    })
+  }
+  newCompilationParams() {
+    const params = {
+      normalModuleFactory: new normalModuleFactory()
+    }
+    return params
+  }
+  newCompilation(params) {
+    const compilation = this.createCompilation()
+  }
+  createCompilation() {
+    return new Compilation(this)
+  }
+}
+
+module.exports = Compiler
+```
+
+### make 前流程回顾
+
+**步骤**
+
+1. 实例化 `compiler` 对象（它会贯穿整个 webpack 工作过程）
+2. 由 `compiler` 调用 run 方法
+
+**compiler 实例化操作**
+
+1. `compiler` 继承 `tapable` 因此它具备钩子的操作能力（监听事件、触发事件，webpack 是一个事件流）
+2. 在实例化了 `compiler` 对象之后就往它的身上挂载很多属性，其中 `NodeEnvironmentPlugin` 这个操作就让它具备了文件读写的能力（我们模拟时采用的是 node 自带的 fs）
+3. 具备了 fs 操作能力之后有将 `plugins` 中的插件都挂载到了 `compiler` 对象身上
+4. 将内部默认的插件与 `compiler` 建立管理，其中 `EntryOptionPlugin` 处理了入口模块的 id
+5. 在实例化 `compiler` 的时候只是监听了 `make` 钩子（`SingleEntryPlugin`）
+   - 在 `SingleEntryPlugin` 模块的 `apply` 方法中有二个钩子监听
+   - 其中 `compilation` 钩子就是让 `compilation` 具备了 `normalModuleFactory` 工厂创建一个普通模块的能力
+   - 因为它就是利用一个自己创建的模块来加载需要被打包的模块
+   - 其中 `make` 钩子在 `compiler.run` 的时候会被触发，走到这里就意味着某个模块执行打包之前的所有准备工作就完成了
+   - `addEntry` 方法调用
+
+**run 方法执行**（当前想看的是什么时候触发了 make 钩子）
+
+1. `run` 方法就是一堆钩子按着顺序触发（`beforeRun`、`run`、`compile`）
+2. `compile` 方法执行
+   - 准备参数（其中 `newCompilationParams` 是我们后续创建工厂模块的）
+   - 触发钩子 `beforeCompile`
+   - 将第一步的参数传给一个函数，开始创建一个 `compilation`（`newCompilation`）
+   - 在调用 `newCompilation` 的内部
+     - 调用了 `createCompilation`
+     - 触发了 `this.compilation` 钩子和 `compilation` 钩子的监听
+3. 当创建了 `compilation` 对象之后就触发了 `make` 钩子
+4. 当我们触发 `make` 钩子监听的时候，将 `compilation` 对象传递过去
+
+**总结**
+
+1. 实例化 `compiler`
+2. 调用 `compile` 方法
+3. `newCompilation`
+4. 实例化了一个 `compilation` 对象（它和 `compiler` 是有关系的）
+5. 触发 `make` 监听
+6. 调用 `addEntry` 方法（这个时候就带着 `context`、`name`、`entry` 一堆东西）就奔着编译去了
+
+### addEntry 流程分析
+
+1. `make` 钩子在触发的时候接收了 `compilation` 对象实现，它的身上挂载了很多内容
+
+2. 从 `compilation` 中解构了三个值
+
+   `entry`：当前需要被打包的模块的相对路径（`'./src/index.js'`）
+
+   `context`：当前项目的根路径
+
+3. `dep` 是对当前入口模块中的依赖关系进行处理
+
+4. 调用了 `addEntry` 方法
+
+5. 在 `compilation` 实例的身上有一个 `addEntry` 方法，然后内部调用了 `_addModuleChain` 方法去处理依赖
+
+6. 在 `compilation` 当中我们可以通过 `NormalModuleFactory` 工厂来创建一个普通模块对象
+
+7. 在 `webpack` 内部默认启了一个 100 并发量的打包操作，当我们看到的是 `normalModule.create()`
+
+8. 在 `beforeResolve` 里面会触发一个 `factory` 钩子监听（这个部分的操作其实是处理 loader，当前不重点研究）
+
+9. 上述操作完成之后获取到了一个函数被存在 `factory` 里，然后对它进行了调用
+
+10. 在这个函数调用里又触发了一个叫 `resolver` 的钩子（处理 loader 的，此时拿到了 `resolver` 方法意味着所有的 loader 处理完毕）
+
+11. 调用 `resolver` 方法之后，就会进入到 `afterResolve` 这个钩子，然后就会触发 `new NormalModule`
+
+12. 在完成上述操作之后就将 `module` 进行了保存和一些其它属性的添加
+
+13. 调用 `buildModule` 方法开始编译（调用 `build`，之后调用 `doBuild`）
+
+### addEntry 实现
+
+修改 `lib/Compiler.js`
+
+```js
+const { Tapable, AsyncSeriesHook, SyncBailHook, SyncHook, AsyncParallelHook } = require('tapable')
+const NormalModuleFactory = require('./normalModuleFactory')
+const Compilation = require('./Compilation')
+const Stats = require('./Stats')
+
+class Compiler extends Tapable {
+  constructor(context) {
+    super()
+    this.context = context
+    this.hooks = {
+      done: new AsyncSeriesHook(['stats']),
+      entryOption: new SyncBailHook(['context', 'entry']),
+
+      beforeRun: new AsyncSeriesHook(['compiler']),
+      run: new AsyncSeriesHook(['compiler']),
+
+      thisCompilation: new SyncHook(['compilation', 'params']),
+      compilation: new SyncHook(['compilation', 'params']),
+
+      beforeCompile: new AsyncSeriesHook(['params']),
+      compile: new SyncHook(['params']),
+      make: new AsyncParallelHook(['compilation']),
+      afterCompile: new AsyncSeriesHook(['compilation'])
+    }
+  }
+  run(callback) {
+    console.log('run 方法执行了~~~')
+
+    const finalCallback = function (err, stats) {
+      callback(err, stats)
+    }
+
+    const onCompiled = function (err, compilation) {
+      console.log('onCompiled 方法执行了~~~')
+      finalCallback(err, new Stats(compilation))
+    }
+
+    this.hooks.beforeRun.callAsync(this, err => {
+      this.hooks.run.callAsync(this, err => {
+        this.compile(onCompiled)
+      })
+    })
+  }
+  compile(callback) {
+    const params = this.newCompilationParams()
+
+    this.hooks.beforeRun.callAsync(params, err => {
+      this.hooks.compile.call(params)
+      const compilation = this.newCompilation(params)
+
+      this.hooks.make.callAsync(compilation, err => {
+        console.log('make钩子监听触发了~~~')
+        callback(err, compilation)
+      })
+    })
+  }
+  newCompilationParams() {
+    const params = {
+      normalModuleFactory: new NormalModuleFactory()
+    }
+    return params
+  }
+  newCompilation(params) {
+    const compilation = this.createCompilation()
+    this.hooks.thisCompilation.call(compilation, params)
+    this.hooks.compilation.call(compilation, params)
+    return compilation
+  }
+  createCompilation() {
+    return new Compilation(this)
+  }
+}
+
+module.exports = Compiler
+```
+
+修改 `lib/Compilation.js`
+
+```js
+const { Tapable, SyncHook } = require('tapable')
+const path = require('path')
+const NormalModuleFactory = require('./normalModuleFactory')
+const Parser = require('./Parser')
+
+// 实例化一个 normalModuleFactory parser
+const normalModuleFactory = new NormalModuleFactory()
+const parser = new Parser()
+
+class Compilation extends Tapable {
+  constructor(compiler) {
+    super()
+    this.compiler = compiler
+    this.context = compiler.context
+    this.options = compiler.options
+    // 让 compilation 具备文件的读写能力
+    this.inputFileSystem = compiler.inputFileSystem
+    this.outputFileSystem = compiler.outputFileSystem
+    this.entries = [] // 存入所有入口模块的数组
+    this.modules = [] // 存放所有模块的数据
+    this.hooks = {
+      succeedModule: new SyncHook(['module'])
+    }
+  }
+  /**
+   * 完成模块编译操作
+   * @param {*} context 当前项目的根
+   * @param {*} entry 当前的入口的相对路径
+   * @param {*} name chunkName main
+   * @param {*} callback 回调
+   */
+  addEntry(context, entry, name, callback) {
+    this._addModuleChain(context, entry, name, (err, module) => {
+      callback(err, module)
+    })
+  }
+  _addModuleChain(context, entry, name, callback) {
+    let entryModule = normalModuleFactory.create({
+      name,
+      context,
+      rawRequest: entry,
+      // 当前操作的核心作用就是返回 entry 入口的绝对路径
+      resource: path.posix.join(context, entry),
+      parser
+    })
+
+    const afterBuild = function (err) {
+      callback(err, entryModule)
+    }
+
+    this.buildModule(entryModule, afterBuild)
+
+    // 当我们完成了本次的 build 操作之后将 module 进行保存
+    this.entries.push(entryModule)
+    this.modules.push(entryModule)
+  }
+  /**
+   * 完成具体的 build 行为
+   * @param {*} module 当前需要被编译的模块
+   * @param {*} callback
+   */
+  buildModule(module, callback) {
+    module.build(this, err => {
+      // 如果代码走到这里就意味着当前 Module 的编译完成了
+      this.hooks.succeedModule.call(module)
+      callback(err)
+    })
+  }
+}
+
+module.exports = Compilation
+```
+
+新增 `lib/normalModuleFactory.js`
+
+```js
+const NormalModule = require('./normalModule')
+
+class NormalModuleFactory {
+  create(data) {
+    return new NormalModule(data)
+  }
+}
+
+module.exports = NormalModuleFactory
+```
+
+新增 `lib/normalModule.js`
+
+```js
+class NormalModule {
+  constructor(data) {
+    this.name = data.name
+    this.entry = data.entry
+    this.rawRequest = data.rawRequest
+    this.parser = data.parser // TODO 等待完成
+    this.resource = data.resource
+    this._source // 存放某个模块的源代码
+    this._ast // 存放某个模块代码对应的 ast
+  }
+  build(compilation, callback) {
+    // 01 从文件中读取将来需要被加载的 module 内容
+    // 02 如果当前不是 js 模块则需要 Loader 进行处理，最终返回 js 模块
+    // 03 上述的操作完成之后可以将 js 代码转化为 ast 语法树
+    // 04 当前 js 模块内部可能又引用了其它的模块，因此我们需要递归完成
+    // 05 前面的完成之后，我们只需要重复执行即可
+    this.doBuild(compilation, err => {
+      this._ast = this.parser.parser(this._source)
+      callback(err)
+    })
+  }
+  doBuild(compilation, callback) {
+    this.getSource(compilation, (err, source) => {
+      this._source = source
+      callback()
+    })
+  }
+  getSource(compilation, callback) {
+    compilation.inputFileSystem.readFile(this.resource, 'utf-8', callback)
+  }
+}
+
+module.exports = NormalModule
+```
+
+安装 `babylon`
+
+```bash
+npm i babylon
+```
+
+新增 `lib/Parser.js`
+
+```js
+const babylon = require('babylon')
+const { Tapable } = require('tapable')
+
+class Parser extends Tapable {
+  parse(source) {
+    return babylon.parse(source, {
+      sourceType: 'module',
+      // 当前插件可以支持 import() 动态导入的语法
+      plugins: ['dynamicImport']
+    })
+  }
+}
+
+module.exports = Parser
+```
+
+新增 `lib/Stats.js`
+
+```js
+class Stats {
+  constructor(compilation) {
+    this.entries = compilation.entries
+    this.modules = compilation.modules
+  }
+  toJson() {
+    return this
+  }
+}
+
+module.exports = Stats
+```
+
+### 依赖模块处理
+
+在 `package.json` 中增加依赖
+
+```json
+{
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/generator": "^7.12.11",
+    "@babel/traverse": "^7.12.12",
+    "@babel/types": "^7.12.12",
+    "babylon": "^6.18.0",
+    "ejs": "^3.1.5",
+    "mkdirp": "^1.0.4",
+    "neo-async": "^2.6.2",
+    "tapable": "^1.1.3",
+    "webpack": "^4.45.0",
+    "webpack-cli": "^3.3.12"
+  }
+}
+```
+
+由于 `lib/normalModule.js` 里面的 `this.entry` 和 `this.rawRequest` 是一个意思，所以将 `this.entry` 删除
+
+1. 需要将 `src/index.js` 里的 `require` 方法替换成 `__webpack_require__`
+2. 将 `./title` 替换成 `./src/title.js`
+3. 实现递归操作，所以要将依赖的模块信息保存好，方便交给下一次 `create`
+
+**babel**
+
+- `generator`：我们把 ast 改完，但是这个不能运行（抽象的），就可以使用 `generator` 构建成代码
+- `traverse`：我们拿到了 DOM 树，我们想去改上面的东西，我得有手段进这个树或看这个树上每一个节点，`traverse` 可以起到遍历的作用
+
+有个线上小工具 [AST explorer](https://link.juejin.cn/?target=https%3A%2F%2Fastexplorer.net%2F) 可以在线将 JS 代码转换为语法树 AST，将解析器选择为 `acorn` 即可
+
+![image-20220621104901885](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220621104901885.png)
+
+修改 `lib/normalModule.js`
+
+```js
+const path = require('path')
+const types = require('@babel/types')
+const generator = require('@babel/generator').default
+const traverse = require('@babel/traverse').default
+
+class NormalModule {
+  constructor(data) {
+    this.context = data.context
+    this.name = data.name
+    this.rawRequest = data.rawRequest
+    this.parser = data.parser // TODO 等待完成
+    this.resource = data.resource
+    this._source // 存放某个模块的源代码
+    this._ast // 存放某个模块代码对应的 ast
+    this.dependencies = [] // 定义一个空数组用于保存被依赖加载的模块信息
+  }
+  build(compilation, callback) {
+    // 01 从文件中读取将来需要被加载的 module 内容
+    // 02 如果当前不是 js 模块则需要 Loader 进行处理，最终返回 js 模块
+    // 03 上述的操作完成之后可以将 js 代码转化为 ast 语法树
+    // 04 当前 js 模块内部可能又引用了其它的模块，因此我们需要递归完成
+    // 05 前面的完成之后，我们只需要重复执行即可
+    this.doBuild(compilation, err => {
+      this._ast = this.parser.parse(this._source)
+
+      // 这里的 _ast 就是当前 module 的语法树，我们可以对它进行修改，最后再将 ast 转换成 code 代码
+      traverse(this._ast, {
+        CallExpression: nodePath => {
+          let node = nodePath.node
+          // 定位 require 所在的节点
+          if (node.callee.name === 'require') {
+            // 获取原始的请求路径
+            let modulePath = node.arguments[0].value // ./title
+            // 取出当前被加载的模块名称
+            let moduleName = modulePath.split(path.posix.sep).pop() // title
+            // [当前我们的打包器只处理 js]
+            let extName = moduleName.indexOf('.') === -1 ? '.js' : ''
+            moduleName += extName // title.js
+            // [最终我们想要读取当前 js 里的内容]所以我们需要个绝对路径
+            let depResource = path.posix.join(path.posix.dirname(this.resource), moduleName)
+            // [将当前模块的 id 定位 OK]
+            let depModuleId = './' + path.posix.relative(this.context, depResource) // ./src/title.js
+
+            // 记录当前被依赖模块的信息，方便后续递归加载
+            this.dependencies.push({
+              name: this.name, // TODO 将来需要修改
+              context: this.context,
+              rawRequest: moduleName,
+              moduleId: depModuleId,
+              resource: depResource
+            })
+
+            // 替换内容
+            node.callee.name = '__webpack_require__'
+            node.arguments = [types.stringLiteral(depModuleId)]
+          }
+        }
+      })
+
+      // 上述的操作是利用 ast 按要求做了代码修改，下面就是利用 ... 将修改后的 ast 转回成 code
+      let { code } = generator(this._ast)
+      this._source = code
+
+      callback(err)
+    })
+  }
+  doBuild(compilation, callback) {
+    this.getSource(compilation, (err, source) => {
+      this._source = source
+      callback()
+    })
+  }
+  getSource(compilation, callback) {
+    compilation.inputFileSystem.readFile(this.resource, 'utf8', callback)
+  }
+}
+
+module.exports = NormalModule
+```
+
+修改 `lib/Compilation.js`
+
+```js
+const { Tapable, SyncHook } = require('tapable')
+const path = require('path')
+const async = require('neo-async')
+const NormalModuleFactory = require('./normalModuleFactory')
+const Parser = require('./Parser')
+
+// 实例化一个 normalModuleFactory parser
+const normalModuleFactory = new NormalModuleFactory()
+const parser = new Parser()
+
+class Compilation extends Tapable {
+  constructor(compiler) {
+    super()
+    this.compiler = compiler
+    this.context = compiler.context
+    this.options = compiler.options
+    // 让 compilation 具备文件的读写能力
+    this.inputFileSystem = compiler.inputFileSystem
+    this.outputFileSystem = compiler.outputFileSystem
+    this.entries = [] // 存入所有入口模块的数组
+    this.modules = [] // 存放所有模块的数据
+    this.hooks = {
+      succeedModule: new SyncHook(['module'])
+    }
+  }
+  /**
+   * 完成模块编译操作
+   * @param {*} context 当前项目的根
+   * @param {*} entry 当前的入口的相对路径
+   * @param {*} name chunkName main
+   * @param {*} callback 回调
+   */
+  addEntry(context, entry, name, callback) {
+    this._addModuleChain(context, entry, name, (err, module) => {
+      callback(err, module)
+    })
+  }
+  _addModuleChain(context, entry, name, callback) {
+    this.createModule(
+      {
+        parser,
+        name,
+        context,
+        rawRequest: entry,
+        resource: path.posix.join(context, entry),
+        moduleId: './' + path.posix.relative(context, path.posix.join(context, entry))
+      },
+      entryModule => {
+        this.entries.push(entryModule)
+      },
+      callback
+    )
+  }
+  /**
+   * 定义一个创建的方法，达到复用的目的
+   * @param {*} data 创建模块所需要的属性值
+   * @param {*} doAddEntry 可选参数，在加载入口模块的时候，将入口模块的 id 写入 this.entries
+   * @param {*} callback
+   */
+  createModule(data, doAddEntry, callback) {
+    let module = normalModuleFactory.create(data)
+
+    const afterBuild = (err, module) => {
+      // 在 afterBuild 当中我们就需要判断一下，当前次 module 加载完成之后是否需要处理依赖加载
+      if (module.dependencies.length > 0) {
+        // 当前逻辑就表示 module 有需要依赖加载的模块，因此我们可以再单独定义一个方法来实现
+        this.processDependencies(module, err => {
+          callback(err, module)
+        })
+      }
+
+      callback(err, module)
+    }
+
+    this.buildModule(module, afterBuild)
+
+    // 当我们完成了本次的 build 操作之后将 module 进行保存
+    doAddEntry && doAddEntry(module)
+    this.modules.push(module)
+  }
+  /**
+   * 完成具体的 build 行为
+   * @param {*} module 当前需要被编译的模块
+   * @param {*} callback
+   */
+  buildModule(module, callback) {
+    module.build(this, err => {
+      // 如果代码走到这里就意味着当前 Module 的编译完成了
+      this.hooks.succeedModule.call(module)
+      callback(err, module)
+    })
+  }
+  processDependencies(module, callback) {
+    // 01 当前的函数核心功能就是实现一个被依赖模块的递归加载
+    // 02 加载模块的思路都是创建一个模块，然后想办法将被加载的模块内容拿进来
+    // 03 当前我们不知道 module 需要依赖几个模块，此时我们需要想办法让所有依赖的模块都加载完成之后再执行 callback[neo-async]
+    let dependencies = module.dependencies
+
+    async.forEach(
+      dependencies,
+      (dependency, done) => {
+        this.createModule(
+          {
+            parser,
+            name: dependency.name,
+            context: dependency.context,
+            rawRequest: dependency.rawRequest,
+            moduleId: dependency.moduleId,
+            resource: dependency.resource
+          },
+          null,
+          done
+        )
+      },
+      callback
+    )
+  }
+}
+
+module.exports = Compilation
+```
+
+### chunk 流程分析及实现
+
+修改 `lib/Compilation.js`
+
+```js
+const { Tapable, SyncHook } = require('tapable')
+const path = require('path')
+const ejs = require('ejs')
+const async = require('neo-async')
+const NormalModuleFactory = require('./normalModuleFactory')
+const Parser = require('./Parser')
+const Chunk = require('./Chunk')
+
+// 实例化一个 normalModuleFactory parser
+const normalModuleFactory = new NormalModuleFactory()
+const parser = new Parser()
+
+class Compilation extends Tapable {
+  constructor(compiler) {
+    super()
+    this.compiler = compiler
+    this.context = compiler.context
+    this.options = compiler.options
+    // 让 compilation 具备文件的读写能力
+    this.inputFileSystem = compiler.inputFileSystem
+    this.outputFileSystem = compiler.outputFileSystem
+    this.entries = [] // 存入所有入口模块的数组
+    this.modules = [] // 存放所有模块的数据
+    this.chunks = [] // 存放当前次打包过程中所产出的 chunk
+    this.assets = [] // 存放键值对
+    this.files = [] // 存放 fileName
+    this.hooks = {
+      succeedModule: new SyncHook(['module']),
+      seal: new SyncHook(),
+      beforeChunks: new SyncHook(),
+      afterChunks: new SyncHook()
+    }
+  }
+  /**
+   * 完成模块编译操作
+   * @param {*} context 当前项目的根
+   * @param {*} entry 当前的入口的相对路径
+   * @param {*} name chunkName main
+   * @param {*} callback 回调
+   */
+  addEntry(context, entry, name, callback) {
+    this._addModuleChain(context, entry, name, (err, module) => {
+      callback(err, module)
+    })
+  }
+  _addModuleChain(context, entry, name, callback) {
+    this.createModule(
+      {
+        parser,
+        name,
+        context,
+        rawRequest: entry,
+        resource: path.posix.join(context, entry),
+        moduleId: './' + path.posix.relative(context, path.posix.join(context, entry))
+      },
+      entryModule => {
+        this.entries.push(entryModule)
+      },
+      callback
+    )
+  }
+  /**
+   * 定义一个创建的方法，达到复用的目的
+   * @param {*} data 创建模块所需要的属性值
+   * @param {*} doAddEntry 可选参数，在加载入口模块的时候，将入口模块的 id 写入 this.entries
+   * @param {*} callback
+   */
+  createModule(data, doAddEntry, callback) {
+    let module = normalModuleFactory.create(data)
+
+    const afterBuild = (err, module) => {
+      // 在 afterBuild 当中我们就需要判断一下，当前次 module 加载完成之后是否需要处理依赖加载
+      if (module.dependencies.length > 0) {
+        // 当前逻辑就表示 module 有需要依赖加载的模块，因此我们可以再单独定义一个方法来实现
+        this.processDependencies(module, err => {
+          callback(err, module)
+        })
+      }
+
+      callback(err, module)
+    }
+
+    this.buildModule(module, afterBuild)
+
+    // 当我们完成了本次的 build 操作之后将 module 进行保存
+    doAddEntry && doAddEntry(module)
+    this.modules.push(module)
+  }
+  /**
+   * 完成具体的 build 行为
+   * @param {*} module 当前需要被编译的模块
+   * @param {*} callback
+   */
+  buildModule(module, callback) {
+    module.build(this, err => {
+      // 如果代码走到这里就意味着当前 Module 的编译完成了
+      this.hooks.succeedModule.call(module)
+      callback(err, module)
+    })
+  }
+  processDependencies(module, callback) {
+    // 01 当前的函数核心功能就是实现一个被依赖模块的递归加载
+    // 02 加载模块的思路都是创建一个模块，然后想办法将被加载的模块内容拿进来
+    // 03 当前我们不知道 module 需要依赖几个模块，此时我们需要想办法让所有依赖的模块都加载完成之后再执行 callback[neo-async]
+    let dependencies = module.dependencies
+
+    async.forEach(
+      dependencies,
+      (dependency, done) => {
+        this.createModule(
+          {
+            parser,
+            name: dependency.name,
+            context: dependency.context,
+            rawRequest: dependency.rawRequest,
+            moduleId: dependency.moduleId,
+            resource: dependency.resource
+          },
+          null,
+          done
+        )
+      },
+      callback
+    )
+  }
+  seal(callback) {
+    this.hooks.seal.call()
+    this.hooks.beforeChunks.call()
+
+    // 01 当前所有的入口模块都被存放在了 compilation 对象的 entries 数组里
+    // 02 所谓封装 chunk 指的就是依据某个入口，然后找到它的所有依赖，将它们的源代码放在一起，之后再做合并
+    for (const entryModule of this.entries) {
+      // 核心： 创建模块加载已有模块的内容，同时记录模块信息
+      const chunk = new Chunk(entryModule)
+      // 保存 chunk 信息
+      this.chunks.push(chunk)
+      // 给 chunk 属性赋值
+      chunk.modules = this.modules.filter(module => module.name === chunk.name)
+    }
+    // chunk 流程梳理之后就进入到了 chunk 代码处理环节（模板文件 + 模块中的源代码）
+    this.hooks.afterChunks.call(this.chunks)
+
+    // 生成代码内容
+    this.createChunkAssets()
+    callback()
+  }
+  createChunkAssets() {
+    for (let i = 0; i < this.chunks.length; i++) {
+      const chunk = this.chunks[i]
+      const fileName = chunk.name + '.js'
+      chunk.files.push(fileName)
+
+      // 01 获取模板文件的路径
+      let tempPath = path.posix.join(__dirname, 'temp/main.ejs')
+      // 02 读取模块文件中的内容
+      let tempCode = this.inputFileSystem.readFileSync(tempPath, 'utf8')
+      // 03 获取渲染函数
+      let tempRender = ejs.compile(tempCode)
+      // 04 按ejs的语法渲染数据
+      let source = tempRender({
+        entryModuleId: chunk.entryModule.moduleId,
+        modules: chunk.modules
+      })
+      // 输出文件
+      this.emitAssets(fileName, source)
+    }
+  }
+  emitAssets(fileName, source) {
+    this.assets[fileName] = source
+    this.files.push(fileName)
+  }
+}
+
+module.exports = Compilation
+```
+
+修改 `lib/Compilation.js`
+
+```js
+const { Tapable, AsyncSeriesHook, SyncBailHook, SyncHook, AsyncParallelHook } = require('tapable')
+const path = require('path')
+const mkdirp = require('mkdirp')
+const NormalModuleFactory = require('./normalModuleFactory')
+const Compilation = require('./Compilation')
+const Stats = require('./Stats')
+
+class Compiler extends Tapable {
+  constructor(context) {
+    super()
+    this.context = context
+    this.hooks = {
+      done: new AsyncSeriesHook(['stats']),
+      entryOption: new SyncBailHook(['context', 'entry']),
+
+      beforeRun: new AsyncSeriesHook(['compiler']),
+      run: new AsyncSeriesHook(['compiler']),
+
+      thisCompilation: new SyncHook(['compilation', 'params']),
+      compilation: new SyncHook(['compilation', 'params']),
+
+      beforeCompile: new AsyncSeriesHook(['params']),
+      compile: new SyncHook(['params']),
+      make: new AsyncParallelHook(['compilation']),
+      afterCompile: new AsyncSeriesHook(['compilation']),
+
+      emit: new AsyncSeriesHook(['compilation'])
+    }
+  }
+  emitAssets(compilation, callback) {
+    // 当前需要做的核心 01 创建 dist 02 在目录创建完成之后执行文件的写操作
+    // 01 定义一个工具方法用于执行文件的生成操作
+    const emitFiles = err => {
+      const assets = compilation.assets
+      let outputPath = this.options.output.path
+      for (let file in assets) {
+        let source = assets[file]
+        let targetPath = path.posix.join(outputPath, file)
+        this.outputFileSystem.writeFileSync(targetPath, source, 'utf8')
+      }
+      callback(err)
+    }
+    // 创建目录之后启动文件写入
+    this.hooks.emit.callAsync(compilation, err => {
+      mkdirp.sync(this.options.output.path)
+      emitFiles()
+    })
+  }
+  run(callback) {
+    console.log('run 方法执行了~~~')
+
+    const finalCallback = function (err, stats) {
+      callback(err, stats)
+    }
+
+    const onCompiled = (err, compilation) => {
+      console.log('onCompiled 方法执行了~~~')
+
+      // 最终在这里将处理好的 chunk 写入到指定的文件然后输出至 dist
+      this.emitAssets(compilation, err => {
+        let stats = new Stats(compilation)
+        finalCallback(err, stats)
+      })
+    }
+
+    this.hooks.beforeRun.callAsync(this, err => {
+      this.hooks.run.callAsync(this, err => {
+        this.compile(onCompiled)
+      })
+    })
+  }
+  compile(callback) {
+    const params = this.newCompilationParams()
+
+    this.hooks.beforeRun.callAsync(params, err => {
+      this.hooks.compile.call(params)
+      const compilation = this.newCompilation(params)
+
+      this.hooks.make.callAsync(compilation, err => {
+        // console.log('make钩子监听触发了~~~~~')
+        // callback(err, compilation)
+
+        // 在这里我们开始处理 chunk
+        compilation.seal(err => {
+          this.hooks.afterCompile.callAsync(compilation, err => {
+            callback(err, compilation)
+          })
+        })
+      })
+    })
+  }
+  newCompilationParams() {
+    const params = {
+      normalModuleFactory: new NormalModuleFactory()
+    }
+    return params
+  }
+  newCompilation(params) {
+    const compilation = this.createCompilation()
+    this.hooks.thisCompilation.call(compilation, params)
+    this.hooks.compilation.call(compilation, params)
+    return compilation
+  }
+  createCompilation() {
+    return new Compilation(this)
+  }
+}
+
+module.exports = Compiler
+```
+
