--- a/Vue3/04-Vue3开发基础语法（二）.md
+++ b/Vue3/04-Vue3开发基础语法（二）.md
@@ -318,7 +318,7 @@ const App = {
 
 ## 购物车案例
 
-![image-20220623154145741](E:\learn\011-深入Vue3+TypeScript技术栈\img\image-20220623154145741.png)
+![image-20220623154145741](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220623154145741.png)
 
 说明：
 
