完成组合式API2

--- a/Vue3/06-.webpack.md
+++ b/Vue3/06-.webpack.md
@@ -498,7 +498,7 @@ Vue 模板中使用到一个 BASE_URL 的常量
 - `<link rel="icon" href="<%= BASE_URL %>favicon.ico">`
 - 我们并没有设置过这个常量值，所以会出现没有定义的错误，这个时候我们可以使用 DefinePlugin 插件
 
-![image-20220630113102041](E:\learn\lagouBigFront\md\Vue3\img\image-20220630113102041.png)
+![image-20220630113102041](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220630113102041.png)
 
 DefinePlugin 允许在编译时创建配置的全局变量，是一个 webpack 内置的插件
 
