--- a/Vue3/10-Vue3组件化开发.md
+++ b/Vue3/10-Vue3组件化开发.md
@@ -572,7 +572,7 @@ export default {
 
 点击一个tab-bar，切换不同的组件显示
 
-![image-20220707172019437](E:\learn\lagouBigFront\md\Vue3\img\image-20220707172019437.png)
+![image-20220707172019437](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220707172019437.png)
 
 - 方式一：通过 v-if 来判断，显示不同的组件
 
@@ -625,7 +625,7 @@ include 和 exclude prop 允许组件有条件的缓存：
 - 二者都可以用逗号分隔字符串、正则表达式或一个数组来表示
 - 匹配首先检查组件自身的 name 选项
 
-![image-20220708085341519](E:\learn\lagouBigFront\md\Vue3\img\image-20220708085341519.png)
+![image-20220708085341519](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220708085341519.png)
 
 ### 异步组件
 
@@ -640,7 +640,7 @@ include 和 exclude prop 允许组件有条件的缓存：
 - 这些 chunk.js 会在 **需要时从服务器加载下载**，并且运行代码，显示对应的内容
 - 通过 import 函数导入的模块, 后续 webpack 对其进行打包的时候就会进行分包的操作
 
-![image-20220708091715746](E:\learn\lagouBigFront\md\Vue3\img\image-20220708091715746.png)
+![image-20220708091715746](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220708091715746.png)
 
 > [defineasynccomponent](https://v3.cn.vuejs.org/api/global-api.html#defineasynccomponent)
 
@@ -764,9 +764,9 @@ export default {
 - 通过对生命周期函数的回调，我们可以知道目前组件正在经历什么阶段
 - 那么我们就可以在该生命周期中编写属于自己的逻辑代码了
 
-![image-20220708111410246](E:\learn\lagouBigFront\md\Vue3\img\image-20220708111410246.png)
+![image-20220708111410246](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220708111410246.png)
 
-![image-20220708111416649](E:\learn\lagouBigFront\md\Vue3\img\image-20220708111416649.png)
+![image-20220708111416649](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220708111416649.png)
 
 对于缓存的组件来说，再次进入时，我们是不会执行 created 或者 mounted 等生命周期函数的：
 
