--- a/Vue3/12.CompositionAPI.md
+++ b/Vue3/12.CompositionAPI.md
@@ -343,3 +343,381 @@ let { name, age } = info
 ```
 
 如果想让解构出来的属性也是响应式的，可以使用 toRefs 函数，将 reactive 返回的对象中的属性都转成 ref
+
+- 这种做法相当于已经在 `info.name` 和 `ref.value` 之间建立了连接，任何一个修改都会引起另外一个变化
+
+```JS
+const info = reactive({ name: 'cat', age: 12 })
+let { name, age } = toRefs(info)
+```
+
+### toRef
+
+如果我们只希望转换一个 reactive 对象中的属性为 ref，那么可以使用 toRef 方法
+
+```js
+const info = reactive({ name: 'cat', age: 12 })
+let { name } = info
+let age = toRef(info, 'age')
+```
+
+### ref 其他的 API
+
+**unref**
+
+- 如果我们想要获取一个 ref 引用中的 value，那么也可以通过 unref 方法
+
+  - **如果参数是一个 ref，则返回内部值，否则返回参数本身**
+
+    这个是 `val = isRef(val) ? val.value : val` 的语法糖函数
+
+**isRef**
+
+- 判断值 **是否是一个 ref 对象**
+
+**shallowRef**
+
+- 创建一个 **浅层的 ref 对象**
+
+**triggerRef**
+
+- **手动触发和 shallowRef 相关联的副作用**
+
+```html
+<h2>{{ info }}</h2>
+<button @click="changeInfo">修改Info</button>
+
+<script>
+import { shallowRef, triggerRef } from 'vue'
+
+export default {
+  setup() {
+    const info = shallowRef({ name: 'why' })
+    const changeInfo = () => {
+      // 直接修改，页面是不会重新渲染的
+      info.value.name = 'james'
+      triggerRef(info)
+    }
+    return {
+      info,
+      changeInfo
+    }
+  }
+}
+</script>
+```
+
+### customRef
+
+```html
+<input v-model="message" />
+<h2>{{ message }}</h2>
+<script>
+import debounceRef from './hook/useDebounceRef'
+export default {
+  setup() {
+    const message = debounceRef('Hello World')
+    return {
+      message
+    }
+  }
+}
+</script>
+```
+
+- `hook\useDebounceRef.js`
+
+```js
+import { customRef } from 'vue'
+
+// 自定义 ref
+export default function (value) {
+  let timer = null
+  return customRef((track, trigger) => {
+    return {
+      get() {
+        track()
+        return value
+      },
+      set(newValue) {
+        clearTimeout(timer)
+        timer = setTimeout(() => {
+          value = newValue
+          trigger()
+        }, 1000)
+      }
+    }
+  })
+}
+```
+
+### computed
+
+- 在 Options API 中，我们是使用 computed 选项来完成的
+- 在 Composition API 中，我们可以在 setup 函数中使用 computed 方法来编写一个计算属性
+
+如何使用 computed
+
+- 接收一个 getter 函数，并为 getter 函数返回的值，返回一个不变的 ref 对象
+- 接收一个具有 get 和 set 的对象，返回一个可变的（可读写）ref 对象
+
+```js
+// 1.用法一: 传入一个 getter 函数
+// computed 的返回值是一个 ref 对象
+const fullName = computed(() => firstName.value + ' ' + lastName.value)
+
+// 2.用法二: 传入一个对象, 对象包含 getter/setter
+const fullName = computed({
+  get: () => firstName.value + ' ' + lastName.value,
+  set(newValue) {
+    const names = newValue.split(' ')
+    firstName.value = names[0]
+    lastName.value = names[1]
+  }
+})
+```
+
+### watchEffect
+
+- 在 Options API 中，我们可以通过 watch 选项来侦听 data 或者 props 的数据变化，当数据变化时执行某一些操作
+- 在 Composition API 中，我们可以使用 watchEffect 和 watch 来完成响应式数据的侦听
+  - watchEffect 用于自动收集响应式数据的依赖
+  - watch 需要手动指定侦听的数据源
+
+当侦听到某些响应式数据变化时，我们希望执行某些操作，这时候可以使用 watchEffect
+
+- 首先，watchEffect 传入的函数会被立即执行一次，并且在执行过程中会收集依赖
+- 其次，只有收集的依赖发生变化时，watchEffect 传入的函数才会再次执行
+
+```js
+const name = ref('why')
+const age = ref(18)
+
+watchEffect(() => {
+  console.log('name:', name.value, 'age:', age.value)
+})
+```
+
+**watchEffect 停止侦听**
+
+- 如果我们希望停止侦听，这个时候我们可以获取 watchEffect 的返回值函数，调用该函数即可
+
+```js
+const stop = watchEffect(() => {
+  console.log('name:', name.value, 'age:', age.value)
+})
+
+const changeAge = () => {
+  age.value++
+  if (age.value > 25) {
+    stop()
+  }
+}
+```
+
+**watchEffect 清除副作用**
+
+比如在开发中我们需要在侦听函数中执行网络请求，但是在网络请求还没有达到的时候，我们停止了侦听器，或者侦听器侦听函数再次被执行了，那么上一次的网络请求应该被取消掉，这个时候我们就可以清除上一次的副作用
+
+- 在我们给 watchEffect 传入的函数被回调时，其实可以获取到一个参数：onInvalidate
+
+  当 **副作用即将重新执行** 或者 **侦听器被停止** 时会执行该函数传入的回调函数
+
+```js
+const stop = watchEffect(onInvalidate => {
+  const timer = setTimeout(() => {
+    console.log('网络请求成功~')
+  }, 2000)
+  // 在这个函数中清除额外的副作用
+  onInvalidate(() => {
+    clearTimeout(timer)
+  })
+  console.log('name:', name.value, 'age:', age.value)
+})
+```
+
+**watchEffect 执行时机**
+
+会发现结果打印了两次
+
+- 因为 setup 函数在执行时就会立即传入副作用函数，这个时候 DOM 并没有挂载，所以打印 null
+- 而当 DOM 挂载时，会给 title 的 ref 对象赋值新的值，副作用函数会再次执行，打印出对应的元素
+
+```js
+watchEffect(() => {
+  console.log(title.value)
+})
+```
+
+默认情况下，组件的更新会在副作用函数执行之前，如果我们希望在副作用函数中获取到元素
+
+- 这时候我们需要改变副作用函数执行时机（第二个参数）
+
+- 第二个参数默认值是 pre，它会在元素挂载或更新之前执行
+
+  flush 如果为 post，会在元素挂载之后执行
+
+  flush 还接收 sync，这个将强制效果始终同步触发，这是低效的，很少需要使用
+
+```js
+watchEffect(
+  () => {
+    console.log(title.value)
+  },
+  { flush: 'post' }
+)
+```
+
+### setup 中使用 ref
+
+在 setup 中如何使用 ref 或者元素或组件，需要我们定义一个 ref 对象，绑定到元素或者组件的 ref 属性上即可
+
+```html
+<h2 ref="title">哈哈哈</h2>
+<script>
+import { ref, watchEffect } from 'vue'
+export default {
+  setup() {
+    const title = ref(null)
+    watchEffect(
+      () => {
+        console.log(title.value)
+      },
+      { flush: 'post' }
+    )
+    return {
+      title
+    }
+  }
+}
+</script>
+```
+
+### watch
+
+watch 的 API 完全等同于组件 watch 选项的 Property：
+
+- watch 需要侦听特定的数据源，并在回调函数中执行副作用
+- 默认情况下它是惰性的，只有当侦听的源发生变化时才会执行回调
+
+与 watchEffect 的比较，watch 允许我们：
+
+- 懒执行副作用（第一次不会直接执行）
+- 更具体的说明当哪个状态发生改变时，触发侦听器的执行
+- 访问侦听器变化前后的值
+
+**侦听单个数据源**
+
+watch 侦听函数的数据源有两种类型：
+
+- 一个 getter 函数：但是该 getter 函数必须引用可响应式的对象（比如 reactive 或 ref）
+- 直接写入一个可响应式的对象，reactive 或者 ref（比较常用的是 ref）
+
+```js
+// 1.侦听 watch 时,传入一个 getter 函数
+watch(
+  () => info.name,
+  (newValue, oldValue) => {
+    console.log('newValue:', newValue, 'oldValue:', oldValue)
+  }
+)
+
+// 2.传入一个可响应式对象: reactive/ref 对象
+// 情况一: reactive 对象获取到的 newValue 和 oldValue 本身都是 reactive 对象
+watch(info, (newValue, oldValue) => {
+  console.log('newValue:', newValue, 'oldValue:', oldValue)
+})
+// 如果希望 newValue 和 oldValue 是一个普通的对象
+watch(
+  () => {
+    return { ...info }
+  },
+  (newValue, oldValue) => {
+    console.log('newValue:', newValue, 'oldValue:', oldValue)
+  }
+)
+// 情况二: ref 对象获取 newValue 和 oldValue 是 value 值的本身
+const name = ref('why')
+watch(name, (newValue, oldValue) => {
+  console.log('newValue:', newValue, 'oldValue:', oldValue)
+})
+```
+
+![image-20220802154115346](E:\learn\lagouBigFront\md\Vue3\img\image-20220802154115346.png)
+
+**侦听多个数据源**
+
+```js
+watch([() => ({ ...info }), name], ([newInfo, newName], [oldInfo, oldName]) => {
+  console.log(newInfo, newName, oldInfo, oldName)
+})
+```
+
+**watch 的选项**
+
+```js
+watch(
+  () => ({ ...info }),
+  (newInfo, oldInfo) => {
+    console.log(newInfo, oldInfo)
+  },
+  {
+    deep: true,
+    immediate: true
+  }
+)
+```
+
+## Composition API 3
+
+### 生命周期钩子
+
+> [生命周期钩子](https://v3.cn.vuejs.org/guide/composition-api-lifecycle-hooks.html)
+
+在 setup 中可以直接导入 onX 函数注册生命周期钩子
+
+```js
+import { onMounted, onUpdated, onUnmounted } from 'vue'
+
+onMounted(() => {
+  console.log('App Mounted1')
+})
+onMounted(() => {
+  console.log('App Mounted2')
+})
+onUpdated(() => {
+  console.log('App onUpdated')
+})
+onUnmounted(() => {
+  console.log('App onUnmounted')
+})
+```
+
+![image-20220802155319928](E:\learn\lagouBigFront\md\Vue3\img\image-20220802155319928.png)
+
+### provide inject
+
+通过 provide 来提供数据，provide 可以传入两个参数：
+
+- name：提供的属性名
+- value：提供的属性值
+
+在 代组件中可以通过 inject 来注入需要的属性和对应的值，inject 可以传入两个参数：
+
+- 要 inject 的 property 的 name
+- 默认值
+
+```js
+// 父组件
+import { provide, ref, readonly } from 'vue'
+const name = ref('coderwhy')
+let counter = ref(100)
+provide('name', readonly(name))
+provide('counter', readonly(counter))
+
+// 子组件
+import { inject } from 'vue'
+const name = inject('name')
+const counter = inject('counter')
+```
+
